test/conformance/kuttl/reports/admission/test-report-admission-mode/01-manifests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-owner
spec:
  validationFailureAction: audit
  background: false
  rules:
  - name: check-owner
    match:
      any:
      - resources:
          kinds:
            - Namespace
    validate:
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            owner: "?*"
