test/conformance/kuttl/reports/admission/test-report-admission-mode/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-owner
status:
  ready: true
