test/conformance/kuttl/reports/admission/test-report-admission-mode/03-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: ClusterPolicyReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: bar
results:
- message: validation rule 'check-owner' passed.
  policy: require-owner
  resources:
  - apiVersion: v1
    kind: Namespace
    name: bar
  result: pass
  rule: check-owner
  scored: true
  source: kyverno
